--- a/app/src/main/res/layout/fragment_signup_successful.xml
+++ b/app/src/main/res/layout/fragment_signup_successful.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/margin_medium"
-    tools:context=".SignupSuccessfulFragment">
+    tools:context=".presentation.SignupSuccessfulFragment">
 
     <LinearLayout
 
@@ -12,6 +12,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/img_congrats"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:src="@drawable/ic_launcher_background"
+            android:layout_margin="@dimen/margin_medium"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
